# pressure_reminder_bot

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
pd_bot/: bot_driven.py  config.py
pd_bot/formatter/: pressure_as_str.py
pd_bot/plot/: pressure_plot.py
pd_bot/scripts/: pd_bot_start.py
pd_bot/sql/: init_db.sql  sql_driven.py
